<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="240dp"
                android:background="@drawable/border"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:layout_marginLeft="5dp"
                    android:paddingHorizontal="5dp"
                    android:text="@string/type_of_delivery"/>

                <RadioButton
                    android:checked="true"
                    android:buttonTint="#dddddd"
                    android:id="@+id/postcardCheck"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postcard"/>

                <RadioButton
                    android:buttonTint="#dddddd"
                    android:id="@+id/letterCheck"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/letter"/>

                <RadioButton
                    android:buttonTint="#dddddd"
                    android:id="@+id/parcelCheck"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parcel"/>

            </RadioGroup>

            <Button
                android:id="@+id/checkPriceButton"
                android:layout_width="240dp"
                android:layout_height="26dp"
                android:layout_marginTop="10dp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:background="@drawable/epicbutton"
                android:textAllCaps="false"
                android:text="@string/check_price"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/thumbnailImage"
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/pocztowka" />

                <TextView
                    android:id="@+id/priceView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cena: 1zł"
                    android:layout_marginLeft="40dp"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:gravity="right"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:paddingHorizontal="5dp"
                android:text="@string/addressing_data"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="14dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/street_with_number"/>

            <EditText
                android:id="@+id/streetInput"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:background="@drawable/edit_border"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/postal_code"/>

            <EditText
                android:id="@+id/postalCodeInput"
                android:layout_width="120dp"
                android:layout_height="28dp"
                android:background="@drawable/edit_border"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/city"/>

            <EditText
                android:id="@+id/cityInput"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:background="@drawable/edit_border"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="16dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:background="@drawable/epicbutton"
        android:textAllCaps="false"
        android:text="@string/confirm"/>
</LinearLayout>